<resources>

    <!-- signUp & logIn-->
    <string name="app_name">Happy Pizza</string>
    <string name="signUp">ثبت نام</string>
    <string name="mobile">موبایل</string>
    <string name="name">نام :</string>
    <string name="nameAndFamily">نام و نام خانوادگی</string>
    <string name="email">ایمیل</string>
    <string name="companyName">نام شرکت</string>
    <string name="logIn">ورود</string>
    <string name="exit">تا اتمام تماس جاری منتظر بمانید</string>

    <!-- drawer menu -->
    <string name="registerOrder">ثبت سفارش</string>
    <string name="reminder">یادآوری</string>
    <string name="products">محصولات</string>
    <string name="financial">مالی</string>
    <string name="current_costs">هزینه های جاری</string>
    <string name="customers">مشتریان</string>
    <string name="discounts">تخفیفات</string>
    <string name="order">سفارش</string>

    <string name="txt_please_for_exit_reenter_back">برای خروج دوباره کلید بازگشت را بزنید</string>

    <string name="submit">ثبت</string>
    <string name="birthday">تاریخ تولد:</string>
    <string name="cart">سبد خرید</string>
    <string name="price">قیمت</string>

    <string name="date">تاریخ:</string>
    <string name="time">ساعت:</string>
    <string name="address">آدرس :</string>
    <string name="nummber">موبایل :</string>
    <string name="transport_cost">هزینه ارسال :</string>
    <string name="Taxation">مالیات :</string>
    <string name="Discounts">تخفیفات :</string>
    <string name="total">جمع کل :</string>
    <string name="location_delivery">موقعیت پیک</string>
    <string name="Cancel">کنسل کردن</string>
    <string name="change_of_address">تغییر آدرس</string>
    <string name="record_complaint">ثبت شکایت</string>

    <!-- sara -->
    <string name="charge">شارژ من : </string>
    <string name="customer_name">نام مشتری : </string>
    <string name="customer_namee">نام مشتری  </string>
    <string name="Address">آدرس  </string>
    <string name="order_detail">جزئیات سفارش</string>
    <string name="View_route">مشاهده مسیر</string>
    <string name="Call_customer">تماس با مشتری</string>
    <string name="user">نام و نام خانوادگی</string>
    <string name="number">تعداد</string>
    <string name="Verification_code">کد تایید</string>
    <string name="login">ورود</string>
    <string name="send_code">ارسال کد</string>
    <string name="sign_up">ثبت نام</string>
    <string name="already_registered">قبلا ثبت نام کردم</string>
    <string name="password">رمز عبور</string>
    <string name="repeat_password">تکرار رمز عبور</string>
    <string name="history_service">تاریخچه سرویس ها</string>
    <string name="Completed">اتمام یافته</string>
    <string name="canceled">کنسل شده</string>
    <string name="orders">سفارش ها</string>
    <string name="Price">قیمت</string>
    <string name="Toman">تومان</string>
    <string name="Description">توضیحات</string>
    <string name="detaile_service">جزئیات سفارش</string>
    <string name="customer_is_not_answer">پاسخگو نیستن</string>
    <string name="support">پشتیبانی</string>
    <string name="orders_list">لیست سفارش ها</string>
    <string name="support_version">نسخه کاربران پشتیبانی</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lock">قفل</string>
    <string name="newCustomer">جدید</string>
    <string name="options">گزینه ها</string>
    <string name="station">ایستگاه</string>
    <string name="send_menu">ارسال منو</string>
    <string name="setting">تنظیمات</string>
    <string name="bakeTime">زمان شروع پخت : </string>
    <string name="finishTime">زمان پایان : </string>
    <string name="sendTime">زمان ارسال : </string>
    <string name="edit_order">ویرایش سفارش</string>


</resources>