<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/bg_unknown"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_sky_blue"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_3sdp"
                        android:layout_weight="1"
                        android:paddingRight="@dimen/_9sdp"
                        android:text="@string/date"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/txtDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:textColor="@color/darkGray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_3sdp"
                        android:layout_weight="0.5"
                        android:baselineAligned="false"
                        android:text="@string/time"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/txtTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingRight="@dimen/_3sdp"
                        android:textColor="@color/darkGray" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_6sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:paddingRight="@dimen/_9sdp"
                    android:text="@string/customer_name"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/txtCustomerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:textColor="@color/darkGray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.25"
                    android:paddingRight="@dimen/_9sdp"
                    android:text="موبایل:"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/txtMobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/orders"
                android:textColor="@color/darkGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal"
                android:textColor="@color/transparent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:text="@string/order"
                    android:textColor="@color/gray" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/price"
                    android:textColor="@color/gray" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/number"
                    android:textColor="@color/gray" />

            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:divider="@null"
                android:listSelector="@color/transparent"
                tools:listitem="@layout/item_register_order" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="center"
                android:background="@drawable/bg_sky_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8 "
                    android:text="جمع کل"
                    android:textColor="@color/darkGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="105000 تومان"
                    android:textColor="@color/darkGray" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="left"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_7sdp"
                android:background="@color/green"
                android:src="@drawable/ic_back" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_7sdp"
                android:background="@color/lightBlue" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_7sdp"
                android:background="@color/red"
                android:src="@drawable/ic_cancle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>