<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlParent"
    android:clickable="true"
    android:layoutDirection="rtl">

    <com.github.mmin18.widget.RealtimeBlurView
        android:id="@+id/blrView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:realtimeBlurRadius="20dp"
        app:realtimeOverlayColor="#2fff" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_gray"
        android:clickable="true"
        android:gravity="center_vertical|right"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:padding="10dp"
        android:elevation="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/llToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginBottom="@dimen/_5sdp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_user" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/customer_namee"
                android:textColor="@color/darkGray"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llYesterday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginBottom="@dimen/_5sdp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/number"
                android:textColor="@color/darkGray"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTwoDayAgo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_gps" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/Address"
                android:textColor="@color/darkGray"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>