<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGray"
    android:clickable="true"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/_15sdp"
            android:paddingRight="@dimen/_100sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:src="@drawable/ic_happy_pizza" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_top_right_radius"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_15sdp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/ic_phone" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/mobile"
                        android:textColor="@color/color_Titles"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtMobile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_3sdp"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_weight="0.5"
                        android:background="@drawable/bg_item"
                        android:elevation="@dimen/_2sdp"
                        android:inputType="number"
                        android:nextFocusDown="@string/Verification_code"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="0.30" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:padding="@dimen/_8sdp"
                        android:src="@drawable/ic_key" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/Verification_code"
                        android:textColor="@color/color_Titles"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtVerificationCode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_weight="0.5"
                        android:background="@drawable/bg_item"
                        android:elevation="@dimen/_2sdp"
                        android:inputType="number"
                        android:nextFocusDown="@id/btnLogin"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/btnSendCode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="0.25"
                        android:background="@drawable/bg_light_red"
                        android:elevation="@dimen/_2sdp"
                        android:text="@string/send_code"
                        android:textColor="@color/color_Red"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/color_Red"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/bg_red"
                    android:elevation="@dimen/_2sdp"
                    android:paddingLeft="@dimen/_50sdp"
                    android:paddingRight="@dimen/_50sdp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>